TMDM-3982: Fixed the IE8 specific issue where field is covered by toolbar.
git-svn-id: http://talendforge.org/svn/tom/trunk@83774 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.webapp.browserecords/war/BrowseRecords.css
+++ b/org.talend.mdm.webapp.browserecords/war/BrowseRecords.css
@@ -341,6 +341,7 @@ a{
 #TreeDetail-tree
 {
     overflow: auto;
+    padding-top: 5px;
 }
 
 #TreeDetail-root
